--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -10,6 +10,7 @@ h11==0.14.0
 idna==3.7
 mysqlclient==2.2.4
 uvicorn==0.29.0
+pydantic==1.10.12
 SQLAlchemy==2.0.30
 pycparser==2.22
 PyMySQL==1.1.0
