--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,5 @@ python-dotenv==1.0.1
 sniffio==1.3.1
 starlette==0.37.2
 typing-extensions==4.11.0
+mkdocs==1.6.1          
+mkdocs-material==9.1.18
