--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -5,12 +5,13 @@ click==8.1.7
 cryptography==42.0.7
 exceptiongroup==1.2.1
 fastapi==0.110.2
-greenlet==3.0.3
 h11==0.14.0
 idna==3.7
 mysqlclient==2.2.4
 uvicorn==0.29.0
 pydantic==1.10.12
+pydantic==2.4.2
+pydantic_core==2.10.1
 SQLAlchemy==2.0.30
 pycparser==2.22
 PyMySQL==1.1.0
